Add gitignore file

--- a/Math_168_project_models.ipynb
+++ b/Math_168_project_models.ipynb
@@ -168,9 +168,7 @@
     "\n",
     "I created this with the intention of possibly following Prof's idea of \"Study our model on various standard graphs (e.g. star graph, Erdos Renyi, etc), then study our model on graph generated from real-life data, and compare the two.\"\n",
     "\n",
-    "I'm not sure if this is where we wanna go, so feel free to add/change stuff.\n",
-    "\n",
-    "Also I am not sure how to set up git, but if y'all think that would be more helpful, please go ahead!"
+    "I'm not sure if this is where we wanna go, so feel free to add/change stuff."
    ]
   },
   {
